--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "@safetnsr/model-graveyard",
-  "version": "0.1.3",
+  "version": "0.2.0",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "description": "find deprecated AI models in your codebase before they break in production",
   "type": "module",
   "bin": {
